--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -14,9 +14,15 @@
 				<tr>
 					<th></th>
 					<th>Customer</th>
-					<th>Orders</th>
+					<th>Phone</th>
 				</tr>
-
+			{% for customer in customers %}
+			<tr>
+			<td></td>
+			<td> {{ customer.name }}
+			<td> {{ customer.phone }} </td>
+			</tr>
+			{% endfor %}
 			</table>
 		</div>
 	</div>
@@ -35,6 +41,15 @@
 					<th>Remove</th>
 				</tr>
 		
+			{% for order in orders %}
+			<tr>
+				<td> {{ order.product.name }}
+				<td> {{ order.date_created }} </td>
+				<td> {{ order.status }} </td>
+				<td><a href="">Update</a> </td>
+				<td><a href="">Delete</a> </td>
+			</tr>
+			{% endfor %}
 			</table>
 		</div>
 	</div>
