--- a/accounts/templates/accounts/products.html
+++ b/accounts/templates/accounts/products.html
@@ -1,23 +1,30 @@
 {% extends 'accounts/main.html' %}
 
 {% block content %}
-		<div class="row">
-			<div class="col-md">
-				<div class="card card-body">
-					<h5>Products</h5>
-				</div>
-				<div class="card card-body">
-					<table class="table">
-						<tr>
-							<th>Product</th>
-							<th>Category</th>
-							<th>Price</th>
-						</tr>
-						
-					</table>
-				</div>
-			</div>
+<div class="row">
+<div class="col-md">
+	<div class="card card-body">
+		<h5>Products</h5>
+	</div>
+	<div class="card card-body">
+		<table class="table">
+			<tr>
+				<th>Product</th>
+				<th>Category</th>
+				<th>Price</th>
+			</tr>
 			
-		</div>
+			{% for product in products %}
+				<tr>
+				<td>{{ product.name }}</td>
+				<td>{{ product.category }}</td>
+				<td>{{ product.price }}</td>
+				<tr>
+			{% endfor %}	
+		</table>
+	</div>
+</div>
+
+</div>
 {% endblock content %}
 
