--- a/accounts/templates/accounts/customer.html
+++ b/accounts/templates/accounts/customer.html
@@ -16,8 +16,8 @@
 		<div class="card card-body">
 			<h5>Contact Information</h5>
 			<hr>
-			<p>Email: </p>
-			<p>Phone: </p>
+			<p>Email: {{ customer.email }}</p>
+			<p>Phone: {{ customer.phone }}</p>
 		</div>
 	</div>
 
@@ -25,7 +25,7 @@
 		<div class="card card-body">
 			<h5>Total Orders</h5>
 			<hr>
-			<h1 style="text-align: center;padding: 10px"></h1>
+			<h1 style="text-align: center;padding: 10px">{{ num_of_orders }}</h1>
 		</div>
 	</div>
 </div>
@@ -57,7 +57,16 @@
 					<th>Update</th>
 					<th>Remove</th>
 				</tr>
-
+				{% for order in orders %}
+				<tr>
+					<td> {{ order.product.name }} </td>
+					<td> {{ order.product.category }} </td>	
+					<td> {{ order.date_created }} </td>
+					<td> {{ order.status }} </td>
+					<td><a class='btn btn-sn btn-info' href="{% url 'update_order' order.id %}">Update</a> </td>
+					<td><a class='btn btn-sn btn-danger' href="{% url 'delete_order' order.id %}">Delete</a> </td>
+				</tr>
+				{% endfor %}
 			</table>
 		</div>
 	</div>
