--- a/accounts/templates/accounts/customer.html
+++ b/accounts/templates/accounts/customer.html
@@ -6,8 +6,8 @@
 		<div class="card card-body">
 			<h5>Customer:</h5>
 			<hr>
-			<a class="btn btn-outline-info  btn-sm btn-block" href="">Update Customer</a>
-			<a class="btn btn-outline-danger  btn-sm btn-block" href="">Delete Customer</a>
+			<a class="btn btn-outline-info btn-sm btn-block" href="">Update Customer</a>
+			<a class="btn btn-outline-info btn-sm btn-block" href="{% url 'create_order' customer.id %}">Place order</a>
 
 		</div>
 	</div>
