--- a/accounts/templates/accounts/customer.html
+++ b/accounts/templates/accounts/customer.html
@@ -36,6 +36,8 @@
 	<div class="col">
 		<div class="card card-body">
 			<form method="get">
+				{{ myFilter.form }}				
+
 
 		    <button class="btn btn-primary" type="submit">Search</button>
 		  </form>
@@ -54,6 +56,7 @@
 					<th>Category</th>
 					<th>Date Orderd</th>
 					<th>Status</th>
+					<th>Note</th>
 					<th>Update</th>
 					<th>Remove</th>
 				</tr>
@@ -63,6 +66,7 @@
 					<td> {{ order.product.category }} </td>	
 					<td> {{ order.date_created }} </td>
 					<td> {{ order.status }} </td>
+					<td> {{ order.note }} </td>
 					<td><a class='btn btn-sn btn-info' href="{% url 'update_order' order.id %}">Update</a> </td>
 					<td><a class='btn btn-sn btn-danger' href="{% url 'delete_order' order.id %}">Delete</a> </td>
 				</tr>
